Updates the z-index value of the fatex-actions class to correct a visual bug with the header shadow.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -6,7 +6,7 @@
     height: 100%;
     text-shadow: 1px 1px 2px $shadow-color;
     pointer-events: none;
-    z-index: 5;
+    z-index: 4;
 
     &--automation-item {
         right: $component-padding * 2;
